--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetalleContactosActivity">
-
-
-        </activity>
+        <activity android:name=".MapActivity"></activity>
+        <activity android:name=".DetalleContactosActivity"></activity>
         <activity android:name=".contactos" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,6 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCu__jajGBw-WpXaWxO821TPRWJPEmJnsU" />
+
+
     </application>
 
 </manifest>
