--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MapActivity"></activity>
-        <activity android:name=".DetalleContactosActivity"></activity>
-        <activity android:name=".contactos" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".DetalleContactosActivity">
+
+        </activity>
+        <activity android:name=".contactos">
+
+        </activity>
+
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".MainActivity">
+
+
         </activity>
 
         <meta-data
