commit de mensaje alerta me cago en las rutas y horarios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MapActivity"></activity>
-        <activity android:name=".DetalleContactosActivity">
-
-        </activity>
-        <activity android:name=".contactos">
-
-        </activity>
-
+        <activity android:name=".MensajeAlerta"></activity>
+        <activity android:name=".AsientosBus" />
+        <activity android:name=".MapActivity" />
+        <activity android:name=".DetalleContactosActivity" />
+        <activity android:name=".contactos" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,11 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MainActivity">
-
-
-        </activity>
+        <activity android:name=".MainActivity" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -38,8 +31,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCu__jajGBw-WpXaWxO821TPRWJPEmJnsU" />
-
-
     </application>
 
 </manifest>
