--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MensajeAlerta"></activity>
+        <activity android:name=".RutasBus"></activity>
+        <activity android:name=".MensajeAlerta" />
         <activity android:name=".AsientosBus" />
-        <activity android:name=".MapActivity" android:parentActivityName=".MainActivity"></activity>/>
-        <activity android:name=".DetalleContactosActivity" android:parentActivityName=".contactos"></activity>
-        <activity android:name=".contactos" android:parentActivityName=".MainActivity"></activity> />
+        <activity
+            android:name=".MapActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".DetalleContactosActivity"
+            android:parentActivityName=".contactos" />
+        <activity
+            android:name=".contactos"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
-
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-
-
-
 
         <meta-data
             android:name="com.google.android.gms.version"
