--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".RutasBus"></activity>
         <activity android:name=".MensajeAlerta" />
-        <activity android:name=".AsientosBus" />
+        <activity android:name=".AsientosBus"
+            android:parentActivityName=".MainActivity"/>
         <activity
             android:name=".MapActivity"
             android:parentActivityName=".MainActivity" />
