--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jellybeans">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -17,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".OpcionesCuenta"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -33,15 +32,13 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".RutasBus"></activity>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".RutasBus" />
         <activity android:name=".MensajeAlerta" />
         <activity
             android:name=".AsientosBus"
             android:parentActivityName=".MainActivity" />
-
-        <activity
-            android:name=".MapActivity" />
+        <activity android:name=".MapActivity" />
         <activity
             android:name=".DetalleContactosActivity"
             android:parentActivityName=".contactos" />
